test/corpus/builtins.txt
================================================================================
TextBuilder and Guid variables
================================================================================

codeunit 50100 "Builtin Probe"
{
    procedure Build(): Text
    var
        Builder: TextBuilder;
        Id: Guid;
    begin
        Builder.Append('a');
        Builder.AppendLine('b');
        Id := CreateGuid();
        if IsNullGuid(Id) then
            exit('');
        exit(Builder.ToText() + Format(Id));
    end;
}

--------------------------------------------------------------------------------

(source_file
  (object_declaration
    kind: (kw_codeunit)
    id: (integer)
    name: (name_or_keyword
      (name
        (quoted_identifier)))
    body: (object_body
      (procedure_declaration
        (kw_procedure)
        name: (name
          (identifier))
        parameters: (parameter_list)
        returns: (operator)
        return_type: (type_reference
          (kw_text))
        (var_section
          (kw_var)
          (variable_declaration
            (regular_variable_declaration
              name: (name_or_keyword
                (name
                  (identifier)))
              sep: (operator)
              type: (type_reference
                (kw_textbuilder))
              (semicolon)))
          (variable_declaration
            (regular_variable_declaration
              name: (name_or_keyword
                (name
                  (identifier)))
              sep: (operator)
              type: (type_reference
                (kw_guid))
              (semicolon))))
        (begin_end_block
          (kw_begin)
          (statement_list
            (statement
              (expression_statement
                (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))
                      (member_call_suffix
                        member: (name
                          (identifier))
                        call: (argument_list
                          (expression_list
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (string)))))))))))))
            (semicolon)
            (statement
              (expression_statement
                (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))
                      (member_call_suffix
                        member: (name
                          (identifier))
                        call: (argument_list
                          (expression_list
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (string)))))))))))))
            (semicolon)
            (statement
              (expression_statement
                (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))))
                  (binary_operator
                    (operator))
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))
                      (call_suffix
                        call: (argument_list)))))))
            (semicolon)
            (statement
              (if_statement
                (kw_if)
                condition: (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))
                      (call_suffix
                        call: (argument_list
                          (expression_list
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (name
                                      (identifier))))))))))))
                (kw_then)
                consequence: (statement
                  (exit_statement
                    (kw_exit)
                    (argument_list
                      (expression_list
                        (expression
                          (unary_expression
                            (postfix_expression
                              (primary_expression
                                (string)))))))))))
            (semicolon)
            (statement
              (exit_statement
                (kw_exit)
                (argument_list
                  (expression_list
                    (expression
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (name
                              (identifier)))
                          (member_call_suffix
                            member: (name
                              (identifier))
                            call: (argument_list))))
                      (binary_operator
                        (operator))
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (name
                              (identifier)))
                          (call_suffix
                            call: (argument_list
                              (expression_list
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (name
                                          (identifier))))))))))))))))
            (semicolon))
          (kw_end))
        (semicolon)))))

================================================================================
array declarations and indexed access
================================================================================

codeunit 50100 "Builtin Probe"
{
    procedure Fill()
    var
        Txt: array[3] of Text;
        Grid: array[2, 3] of Integer;
        i: Integer;
    begin
        Txt[1] := 'a';
        for i := 2 to ArrayLen(Txt) do
            Txt[i] := Txt[i - 1] + 'b';
        Grid[1, 2] := 5;
    end;
}

--------------------------------------------------------------------------------

(source_file
  (object_declaration
    kind: (kw_codeunit)
    id: (integer)
    name: (name_or_keyword
      (name
        (quoted_identifier)))
    body: (object_body
      (procedure_declaration
        (kw_procedure)
        name: (name
          (identifier))
        parameters: (parameter_list)
        (var_section
          (kw_var)
          (variable_declaration
            (regular_variable_declaration
              name: (name_or_keyword
                (name
                  (identifier)))
              sep: (operator)
              type: (type_reference
                (kw_array)
                (bracketed_block
                  (integer))
                (of_clause
                  (kw_of)
                  (type_keyword)))
              (semicolon)))
          (variable_declaration
            (regular_variable_declaration
              name: (name_or_keyword
                (metadata_keyword))
              sep: (operator)
              type: (type_reference
                (kw_array)
                (bracketed_block
                  (integer)
                  (comma)
                  (integer))
                (of_clause
                  (kw_of)
                  (type_keyword)))
              (semicolon)))
          (variable_declaration
            (regular_variable_declaration
              name: (name_or_keyword
                (name
                  (identifier)))
              sep: (operator)
              type: (type_reference
                (kw_integer))
              (semicolon))))
        (begin_end_block
          (kw_begin)
          (statement_list
            (statement
              (expression_statement
                (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))
                      (index_suffix
                        index: (bracketed_block
                          (integer)))))
                  (binary_operator
                    (operator))
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (string)))))))
            (semicolon)
            (statement
              (for_statement
                (kw_for)
                iterator: (name_or_keyword
                  (name
                    (identifier)))
                assign: (operator)
                from: (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (integer)))))
                direction: (kw_to)
                to: (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))
                      (call_suffix
                        call: (argument_list
                          (expression_list
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (name
                                      (identifier))))))))))))
                (kw_do)
                body: (statement
                  (expression_statement
                    (expression
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (name
                              (identifier)))
                          (index_suffix
                            index: (bracketed_block
                              (identifier)))))
                      (binary_operator
                        (operator))
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (name
                              (identifier)))
                          (index_suffix
                            index: (bracketed_block
                              (identifier)
                              (operator)
                              (integer)))))
                      (binary_operator
                        (operator))
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (string)))))))))
            (semicolon)
            (statement
              (expression_statement
                (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))
                      (index_suffix
                        index: (bracketed_block
                          (integer)
                          (comma)
                          (integer)))))
                  (binary_operator
                    (operator))
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (integer)))))))
            (semicolon))
          (kw_end))
        (semicolon)))))

================================================================================
Format with picture strings
================================================================================

codeunit 50100 "Builtin Probe"
{
    procedure Show(): Text
    begin
        exit(Format(D, 0, '<Year4>-<Month,2>-<Day,2>') + Format(Amount, 0, '<Precision,2:2><Standard Format,0>') + Format(12345.678, 0, 9));
    end;
}

--------------------------------------------------------------------------------

(source_file
  (object_declaration
    kind: (kw_codeunit)
    id: (integer)
    name: (name_or_keyword
      (name
        (quoted_identifier)))
    body: (object_body
      (procedure_declaration
        (kw_procedure)
        name: (name
          (identifier))
        parameters: (parameter_list)
        returns: (operator)
        return_type: (type_reference
          (kw_text))
        (begin_end_block
          (kw_begin)
          (statement_list
            (statement
              (exit_statement
                (kw_exit)
                (argument_list
                  (expression_list
                    (expression
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (name
                              (identifier)))
                          (call_suffix
                            call: (argument_list
                              (expression_list
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (name
                                          (identifier))))))
                                (comma)
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (integer)))))
                                (comma)
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (string))))))))))
                      (binary_operator
                        (operator))
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (name
                              (identifier)))
                          (call_suffix
                            call: (argument_list
                              (expression_list
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (name
                                          (identifier))))))
                                (comma)
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (integer)))))
                                (comma)
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (string))))))))))
                      (binary_operator
                        (operator))
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (name
                              (identifier)))
                          (call_suffix
                            call: (argument_list
                              (expression_list
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (decimal)))))
                                (comma)
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (integer)))))
                                (comma)
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (integer)))))))))))))))
            (semicolon))
          (kw_end))
        (semicolon)))))

================================================================================
CalcDate, Evaluate and StrSubstNo
================================================================================

codeunit 50100 "Builtin Probe"
{
    procedure Dates(): Text
    begin
        D := CalcDate('<+1M>', 20240131D);
        D := CalcDate('<CM>', Today());
        if not Evaluate(N, '42') then
            N := 0;
        exit(StrSubstNo('%1 %2', D, N));
    end;
}

--------------------------------------------------------------------------------

(source_file
  (object_declaration
    kind: (kw_codeunit)
    id: (integer)
    name: (name_or_keyword
      (name
        (quoted_identifier)))
    body: (object_body
      (procedure_declaration
        (kw_procedure)
        name: (name
          (identifier))
        parameters: (parameter_list)
        returns: (operator)
        return_type: (type_reference
          (kw_text))
        (begin_end_block
          (kw_begin)
          (statement_list
            (statement
              (expression_statement
                (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))))
                  (binary_operator
                    (operator))
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))
                      (call_suffix
                        call: (argument_list
                          (expression_list
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (string)))))
                            (comma)
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (date_literal)))))))))))))
            (semicolon)
            (statement
              (expression_statement
                (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))))
                  (binary_operator
                    (operator))
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))
                      (call_suffix
                        call: (argument_list
                          (expression_list
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (string)))))
                            (comma)
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (name
                                      (identifier)))
                                  (call_suffix
                                    call: (argument_list)))))))))))))
            (semicolon)
            (statement
              (if_statement
                (kw_if)
                condition: (expression
                  (unary_expression
                    (unary_operator
                      (op_not))
                    (unary_expression
                      (postfix_expression
                        (primary_expression
                          (name
                            (identifier)))
                        (call_suffix
                          call: (argument_list
                            (expression_list
                              (expression
                                (unary_expression
                                  (postfix_expression
                                    (primary_expression
                                      (name
                                        (identifier))))))
                              (comma)
                              (expression
                                (unary_expression
                                  (postfix_expression
                                    (primary_expression
                                      (string))))))))))))
                (kw_then)
                consequence: (statement
                  (expression_statement
                    (expression
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (name
                              (identifier)))))
                      (binary_operator
                        (operator))
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (integer)))))))))
            (semicolon)
            (statement
              (exit_statement
                (kw_exit)
                (argument_list
                  (expression_list
                    (expression
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (name
                              (identifier)))
                          (call_suffix
                            call: (argument_list
                              (expression_list
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (string)))))
                                (comma)
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (name
                                          (identifier))))))
                                (comma)
                                (expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (name
                                          (identifier))))))))))))))))
            (semicolon))
          (kw_end))
        (semicolon)))))

================================================================================
object references with Database, Codeunit and Report scopes
================================================================================

codeunit 50100 "Builtin Probe"
{
    procedure Run()
    begin
        TableNo := Database::"Tour Member";
        Codeunit.Run(Codeunit::"Tour Posting");
        Codeunit.Run(Codeunit::Posting, Member);
        Report.Run(Report::"Member List");
    end;
}

--------------------------------------------------------------------------------

(source_file
  (object_declaration
    kind: (kw_codeunit)
    id: (integer)
    name: (name_or_keyword
      (name
        (quoted_identifier)))
    body: (object_body
      (procedure_declaration
        (kw_procedure)
        name: (name
          (identifier))
        parameters: (parameter_list)
        (begin_end_block
          (kw_begin)
          (statement_list
            (statement
              (expression_statement
                (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (name
                          (identifier)))))
                  (binary_operator
                    (operator))
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (type_keyword))
                      (scope_suffix
                        member: (name
                          (quoted_identifier))))))))
            (semicolon)
            (statement
              (expression_statement
                (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (object_keyword))
                      (member_call_suffix
                        member: (name
                          (identifier))
                        call: (argument_list
                          (expression_list
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (object_keyword))
                                  (scope_suffix
                                    member: (name
                                      (quoted_identifier))))))))))))))
            (semicolon)
            (statement
              (expression_statement
                (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (object_keyword))
                      (member_call_suffix
                        member: (name
                          (identifier))
                        call: (argument_list
                          (expression_list
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (object_keyword))
                                  (scope_suffix
                                    member: (name
                                      (identifier))))))
                            (comma)
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (name
                                      (identifier))))))))))))))
            (semicolon)
            (statement
              (expression_statement
                (expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (object_keyword))
                      (member_call_suffix
                        member: (name
                          (identifier))
                        call: (argument_list
                          (expression_list
                            (expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (object_keyword))
                                  (scope_suffix
                                    member: (name
                                      (quoted_identifier))))))))))))))
            (semicolon))
          (kw_end))
        (semicolon)))))
